libs/braillify/tests/snapshots/coverage_extra__ellipsis_letters.snap
---
source: libs/braillify/tests/coverage_extra.rs
assertion_line: 447
expression: rendered
---
input  = "a + b + ... + z"
unicode = ok: "⠁⠀⠐⠖⠀⠰⠃⠀⠐⠖⠀⠲⠲⠲⠀⠐⠖⠀⠰⠵"
bytes   = ok: [1, 0, 16, 22, 0, 48, 3, 0, 16, 22, 0, 50, 50, 50, 0, 16, 22, 0, 48, 53]
