libs/braillify/tests/snapshots/coverage_extra__ellipsis_subscript_a.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "a₁, a₂, ..., aₙ"
unicode = ok: "⠁⠰⠼⠁⠐⠀⠁⠰⠼⠃⠐⠀⠠⠠⠠⠐⠀⠁⠰⠝"
bytes   = ok: [1, 48, 60, 1, 16, 0, 1, 48, 60, 3, 16, 0, 32, 32, 32, 16, 0, 1, 48, 29]
