libs/braillify/tests/snapshots/coverage_extra__ellipsis_subscript_x.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "x₁, x₂, ..., xₙ 의 합"
unicode = ok: "⠭⠰⠼⠁⠐⠀⠭⠰⠼⠃⠐⠀⠠⠠⠠⠐⠀⠭⠰⠝⠀⠀⠺⠀⠚⠃"
bytes   = ok: [45, 48, 60, 1, 16, 0, 45, 48, 60, 3, 16, 0, 32, 32, 32, 16, 0, 45, 48, 29, 0, 0, 58, 0, 26, 3]
