libs/braillify/tests/snapshots/coverage_extra__empty_braces.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "$\\{\\}$"
unicode = ok: "⠶⠶"
bytes   = ok: [54, 54]
