libs/braillify/tests/snapshots/coverage_extra__empty_frac.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "$\\frac{}{}$"
unicode = ok: "⠌"
bytes   = ok: [12]
