libs/braillify/tests/snapshots/coverage_extra__empty_sqrt.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "$\\sqrt{}$"
unicode = ok: "⠜"
bytes   = ok: [28]
