libs/braillify/tests/snapshots/coverage_extra__empty_sub.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "$x_{}$"
unicode = ok: "⠭"
bytes   = ok: [45]
