libs/braillify/tests/snapshots/coverage_extra__empty_super.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "$x^{}$"
unicode = ok: "⠭"
bytes   = ok: [45]
