libs/braillify/tests/snapshots/coverage_extra__eq_ab.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "a=b"
unicode = ok: "⠁⠒⠒⠃"
bytes   = ok: [1, 18, 18, 3]
